Revert "right move"
This reverts commit e8b0db3a8140a45dd9d9aa374f4323172d0d2a2f.

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,14 +6,11 @@
 #    By: ysalmi <ysalmi@student.1337.ma>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/05/11 16:36:56 by ysalmi            #+#    #+#              #
-#    Updated: 2023/05/23 20:50:35 by ysalmi           ###   ########.fr        #
+#    Updated: 2023/05/23 20:23:11 by ysalmi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 include core/Makefile lexer/Makefile parser/Makefile executer/Makefile
-
-NAME := minishell
-BONUS := minishell_bonus
 
 CFLAGS := -Wall -Wextra -Werror #-g -fsanitize=address
 
@@ -47,38 +44,39 @@ PARSER_BONUS := $(addprefix parser/, $(PARSER_BONUS))
 EXECUTER_BONUS := $(addprefix executer/, $(EXECUTER_BONUS))
 
 SRC := index.c $(CORE_SRC) $(LEXER_SRC) $(PARSER_SRC) $(EXECUTER_SRC)
-BSRC := index.c $(CORE_SRC) $(LEXER_BONUS) $(PARSER_BONUS) $(EXECUTER_BONUS)
+BONUS := index.c $(CORE_SRC) $(LEXER_BONUS) $(PARSER_BONUS) $(EXECUTER_BONUS)
+
 
 OBJ := $(SRC:%.c=%.o)
 OBJ := $(addprefix obj/, $(OBJ))
 
-BOBJ := $(BSRC:%.c=%.o)
+BOBJ := $(BONUS:%.c=%.o)
 BOBJ := $(addprefix obj/, $(BOBJ))
 
-all: libft dslib $(NAME)
 
-bonus: libft dslib $(BONUS)
+mtest: $(OBJ) libft dslib
+	@$(CC) $(CFLAGS) $I $(READLINE) -o minishell $(OBJ) $(LIBFT_DIR)/libft.a $(DS_LIB)
+	
+btest: $(BOBJ) libft dslib
+	@$(CC) $(CFLAGS) $(READLINE) $I -o $@ $(BOBJ) $(LIBFT_DIR)/libft.a $(DS_LIB)
 
-$(NAME): $(OBJ) $(LIBFT_DIR)/libft.a $(DS_DIR)/datastructures.a
-	@$(CC) $(CFLAGS) $I $(READLINE) -o minishell $^
+echo:
+	@echo $(READLINE)
 
-$(BONUS): $(BOBJ) $(LIBFT_DIR)/libft.a $(DS_DIR)/datastructures.a
-	@$(CC) $(CFLAGS) $(READLINE) $I -o $@ $^
+echo_bonus:
+	@echo $(BONUS)
 
 obj/%.o: %.c
 	@mkdir -p $(shell dirname $@)
 	@$(CC) $(CFLAGS) $I -c $< -o $@
 
-libft:
+libft: 
 	@make -s -C $(LIBFT_DIR)
 
-dslib:
+dslib: 
 	@make -s -C $(DS_DIR)
 
-clean:
-	@rm -rf obj
-
 fclean:
-	@rm -rf obj $(NAME) $(BONUS)
+	@rm -rf obj mtest btest
 	@$(MAKE) -C $(LIBFT_DIR) fclean
 	@$(MAKE) -C $(DS_DIR) fclean
