signal handling: deleting ^C and ^\

--- a/src/core/Makefile
+++ b/src/core/Makefile
@@ -6,7 +6,7 @@
 #    By: ysalmi <ysalmi@student.1337.ma>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/03/23 13:26:16 by ysalmi            #+#    #+#              #
-#    Updated: 2023/05/26 16:45:08 by ysalmi           ###   ########.fr        #
+#    Updated: 2023/05/26 21:20:43 by ysalmi           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -28,6 +28,7 @@ CORE_SRC := builtins.c \
 		get_last_status.c \
 		set_last_status.c \
 		get_path.c \
+		terminal.c \
 		core.utils.c \
 
 CORE_OBJ := $(CORE_SRC:%.c=%.o)
